--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,14 +3,18 @@
 @main("Follow Rugby"){
 
   <div class="span8">
-    <p class="lead">Follow Rugby groups your favourite Rugby Twitter accounts and #hashtags. Get closer to the top players, clubs, national unions, coaches, journalists, broadcasters and amateur clubs. The site will always evolve due to changes on Twitter and developments with our great sport - please get in touch with new accounts and #hashtags using the Suggestions tool below.</p>
+    <p class="lead">Follow Rugby groups your favourite Rugby Twitter accounts and #hashtags. </p>
+
+    <p class="lead">Get closer to the top players, clubs, national unions, coaches, journalists, broadcasters and amateur clubs. </p>
+    
+    <p class="lead">The site will always evolve due to changes on Twitter and developments with our great sport - please get in touch with new accounts and #hashtags using the Suggestions tool below.</p>
 
     <p>We have grouped the accounts for you so please head to your favourite competitions, clubs and national teams.</p>
 
     <p>Coming soon – British and Irish Lions; Rugby Sevens; Japan Top League; Women’s Rugby section; ITM Cup, more IRB nations added to the International Section.</p>
   </div>
  
-} {
+}  {
     <p><strong>Featured Account</strong></p>
   
 		<div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
