--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,18 +15,23 @@
 
    <style type="text/css">
       body {
-        padding-top: 20px;
-        padding-bottom: 40px;
       }
       .navbar {
-        padding-bottom: 20px;
+       
       }
+      
+      .titleimage {
+        padding-bottom:5px;
+      }
+      
+      
     </style>
 </head>
 <body>
    <div class="container">
-      <div class="navbar">
+        <div class="navbar navbar-inverse">
         <div class="navbar-inner">
+        <div class="container">
              	
           <ul class="nav nav-pills">
             <li><a href="@routes.Application.categories("International")">International</a></li>
@@ -40,19 +45,21 @@
       	    <li><a href="@routes.Application.about">About</a></li>
         	</ul>
         </div>
-      </div>
-
+        </div>
+        </div>
     <div class="row">
-      <div class="span2"></div>
-      <div class="span6"><h1>Follow Rugby</h1></div>
+      <div class="span12">
+        <div class="titleimage">
+        <a href="@routes.Application.index"><img src="@routes.Assets.at("images/title.jpg")" padding-bottom></img></a>
+        </div>
+      </div>
     </div>
     <div class="row">
       
-        @content
-      <div class="span4">
-        @widgets
-      </div>
+      @content
+      <div class="span4"> @widgets </div>
     </div>
+    
   </div>     
 </body>
 </html>
