Added Pro12 teams and improved UI.

--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -1,4 +1,4 @@
-@(category: String)(teams: Seq[models.Team])(players: Seq[models.Player])(teamTableInfo: models.TableInfo)(widget: Option[models.Widget])
+@(category: String)(teams: Seq[models.Team])(players: Seq[models.Player])(teamTableInfo: models.CategoryViewInfo)(widget: Option[models.Widget])
 
 @main("Follow Rugby"){
   <div class="span3">
