--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,7 +12,10 @@
     <p>We have grouped the accounts for you so please head to your favourite competitions, clubs and national teams.</p>
 
     <p>Coming soon – British and Irish Lions; Rugby Sevens; Japan Top League; Women’s Rugby section; ITM Cup, more IRB nations added to the International Section.</p>
+    <br>
+    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
   </div>
+  
  
 }  {
     <p><strong>Featured Account</strong></p>
