--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -34,12 +34,12 @@
         <div class="container">
              	
           <ul class="nav nav-pills">
-            <li><a href="@routes.Application.categories("International")">International</a></li>
-            <li><a href="@routes.Application.categories("AvivaPremiership")">Aviva Premiership</a></li>
-            <li><a href="@routes.Application.categories("Pro12")">Pro 12</a></li>
-            <li><a href="@routes.Application.categories("Top14")">Top 14</a></li>
-            <li><a href="@routes.Application.categories("Super15")">Super 15</a></li>
-            <li><a href="@routes.Application.categories("ExPlayers")">Ex Players</a></li>
+            <li><a href="@routes.Application.selectCategory(1)">International</a></li>
+            <li><a href="@routes.Application.selectCategory(4)">Aviva Premiership</a></li>
+            <li><a href="@routes.Application.selectCategory(5)">Pro 12</a></li>
+            <li><a href="@routes.Application.selectCategory(3)">Top 14</a></li>
+            <li><a href="@routes.Application.selectCategory(2)">Super 15</a></li>
+            <li><a href="@routes.Application.selectCategory(6)">Other</a></li>
       	    <li><a href="@routes.Application.hashtags">Hashtags</a></li>
       	    <li><a href="@routes.Application.suggestions">Search</a></li>
       	    <li><a href="@routes.Application.about">About</a></li>
