Moved csv files and organised Model to now use the DB. Added a match centre.

--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -40,11 +40,13 @@
   </div>
   
 }{ 
+  <div class="span4">
   @widget.map { list =>
     <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   }
+  </div>
 }
     
       
