Added the edit teams and members admin screen.

--- a/app/views/admin/tables.scala.html
+++ b/app/views/admin/tables.scala.html
@@ -3,7 +3,7 @@
   <h1>Tables</h1>
   <ul>
     <li><a href="">Category</a></li>
-    <li><a href="">Team</a></li>
+    <li><a href="@routes.Administrator.teamList(0, 2, "")">Team</a></li>
     <li><a href="@routes.Administrator.memberList(0, 2, "")">Player</a></li>
     <li><a href="">Widget</a></li>
   </ul>
