--- a/app/views/admin/teamList.scala.html
+++ b/app/views/admin/teamList.scala.html
@@ -36,7 +36,7 @@
             <input type="submit" id="searchsubmit" value="Filter by name" class="btn primary">
         }
         
-        <a class="btn success" id="add" href="@routes.Administrator.createTeam()">Add a new team</a>
+        <a class="btn success" id="add" href="@routes.Administrator.createTeam">Add a new team</a>
         
     </div>
     
