--- a/app/views/admin/tables.scala.html
+++ b/app/views/admin/tables.scala.html
@@ -4,8 +4,9 @@
   <ul>
     <li><a href="">Category</a></li>
     <li><a href="@routes.Administrator.teamList(0, 2, "")">Team</a></li>
-    <li><a href="@routes.Administrator.memberList(0, 2, "")">Player</a></li>
-    <li><a href="">Widget</a></li>
+    <li><a href="@routes.Administrator.memberList(0, 2, "")">Member</a></li>
+    <li><a href="@routes.Administrator.widgetList(0, 2, "")">Widget</a></li>
+  <li><a href="@routes.Administrator.gameList(0, 2)">Match Centre</a></li>
   </ul>
   
   
