Games now have a widget Id so they can have a hashtag widget.

--- a/app/views/admin/createGame.scala.html
+++ b/app/views/admin/createGame.scala.html
@@ -26,6 +26,7 @@
             
           @inputText(gameForm("time"), '_label -> "Time (00:00)")
           @inputText(gameForm("gameDate"), '_label -> "Date YYYY-MM-DD")
+          @inputText(gameForm("widgetId"), '_label -> "Widget Id")
            
         
         </fieldset>
