--- a/app/views/admin/editTeam.scala.html
+++ b/app/views/admin/editTeam.scala.html
@@ -49,7 +49,7 @@
         </table>
         
         <div class="actions">
-            <input type="submit" value="Save this member" class="btn primary"> or 
+            <input type="submit" value="Save this team" class="btn primary"> or 
             <a href="@routes.Administrator.teamList(0, 2, "")" class="btn">Cancel</a> 
         </div>
         
