added security to the admin tool.

--- a/app/views/admin/tables.scala.html
+++ b/app/views/admin/tables.scala.html
@@ -8,6 +8,8 @@
     <li><a href="@routes.Administrator.widgetList(0, 2, "")">Widget</a></li>
   <li><a href="@routes.Administrator.gameList(0, 2)">Match Centre</a></li>
   </ul>
+	
+	<a href="@routes.Administrator.logout">Logout</a>
   
   
   
