--- a/app/views/admin/editGame.scala.html
+++ b/app/views/admin/editGame.scala.html
@@ -1,4 +1,4 @@
-@(gameForm: Form[Game])(team1: Team)(team2: Team)(teams: Seq[(String, String)])
+@(gameForm: Form[Game])(team1: Team)(team2: Team)(teams: Seq[(String, String)])(competitions: Seq[(String, String)])
 
 @import helper._
 
@@ -21,6 +21,12 @@
                 gameForm("team2Id"), 
                 teams, 
                 '_label -> "Away Team", '_default -> "-- Choose a team --",
+                '_showConstraints -> false
+            )
+            @select(
+                gameForm("competitionId"), 
+                competitions, 
+                '_label -> "Away Team", '_default -> "-- Choose a competition --",
                 '_showConstraints -> false
             )
             
