--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -1,14 +1,33 @@
-@(message: String)
+@()
 
-@main("Follow Rugby"){<p>hello</p>} { 
+@main("Follow Rugby"){
+
+  <div class="span8">
+    <p class="lead">Follow Rugby has been designed to make it easier for anyone interested in rugby to follow its key developments on Twitter.</p>
+
+    <p>The data has been organised into relevant widget groupings so you can see the latest real time updates - simply interact as you would on Twitter: follow, mention, reply, retweet, favorite etc!</p>
+
+    <p>Our Match Centre provides head to head widgets of both teams, which allows you to see the perspective of both sides during the match. A widget for the match #hashtag is also shown – join in the match conversation. The match centre will be updated before each round of major matches and is a great way to follow live score and key action updates on the internet.*</p>
+    
+    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com.</a></p>
+
+    <br>
+    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
+    <br></br>
+    <br></br>
+    <p><small>*We cannot guarantee that all teams will publish updates for all matches but the official accounts of club and international sides are increasingly Tweeting during games – it is a great way to follow the action.</small></p>
+    <br>
+    </div>
+  
  
-			<div class="span6"><a class="twitter-timeline" href="https://twitter.com/FollowRugby666/players" data-widget-id="276076889653772289">Rugby</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
-			<div class="span6"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a>
+}  {
+  <div class="span4"> 
+  <p><strong>Featured</strong></p>
+  
+    <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
-		</div>
-	<div>
+  </div>
       
 
 
