--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -1,4 +1,4 @@
-@(category: Category)(teams: Seq[models.Team])(players: Seq[models.Member])(widget: Option[models.Widget])
+@(category: Category)(teams: Seq[models.Team])(team: Option[models.Team])(players: Seq[models.Member])(widget: Option[models.Widget])
 
 @main("Follow Rugby"){
   <div class="span3">
@@ -15,6 +15,17 @@
   @if(players.isEmpty) {
     <p class="lead">Click on a team on the left to see their players and twitter feed.</p>
   } else {
+  @team.map { t =>
+    <h2>@t.name</h2>
+  	
+  	@t.twitterName.map { twitter =>
+  	<h3>
+  	  <a href="https://www.twitter.com/intent/user?screen_name=@{twitter}">@@@twitter</a> 
+  	</h3>
+  	}
+  }
+  
+  
   <table class="table table-bordered table-condensed">
   <thead>
     <tr>
