--- a/app/views/matchCentre.scala.html
+++ b/app/views/matchCentre.scala.html
@@ -8,15 +8,13 @@
   
   @games.zipWithIndex.map { case (game, idx) =>
     
-      
+      <div class="span12">
+<div class="well">
+      <h2 class="text-center">@game.team1.name V @game.team2.name</h1>
+      <h2 class="text-center">@@@game.game.time</h1>
+</div>
+      </div>
     
-      <div class="span4">
-        <p>@@@game.game.time</p>
-        <p>@game.team1.name</p>
-        <p>vs</p>
-        <p>@game.team2.name</p>
-     </div>
-     
      <div class="span4">
         <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/@{game.team1Widget.twitterAccount}/@{game.team1Widget.url}" data-widget-id="@game.team1Widget.id"></a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -29,6 +27,12 @@
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
      </div>
+          
+     <div class="span4">
+        <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
+     
 
       
     
