Coming soon page added and about page fixed.

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -9,7 +9,7 @@
 
     <p>Our Match Centre provides head to head widgets of both teams, which allows you to see the perspective of both sides during the match. A widget for the match #hashtag is also shown – join in the match conversation. The match centre will be updated before each round of major matches and is a great way to follow live score and key action updates on the internet.*</p>
     
-    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com.</a></p>
+    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.</p>
 
     <br>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
