--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -61,7 +61,7 @@
             </li>
             <li><a href="@routes.Application.selectCategory(8)">More Rugby</a></li>
       	    <li><a href="@routes.Application.about">About</a></li>
-            <li><a href="@routes.Application.hashtags">Coming Soon</a></li>
+            <li><a href="@routes.Application.comingSoon">Coming Soon</a></li>
         	</ul>
         </div>
         </div>
