--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,15 +3,15 @@
 @main("Follow Rugby"){
 
   <div class="span8">
-    <p class="lead">Follow Rugby groups your favourite Rugby Twitter accounts and #hashtags. </p>
+    <p class="lead">Follow Rugby lists rugby Twitter accounts in relevant categories and displays their real time updates on each page.</p>
 
-    <p class="lead">Get closer to the top players, clubs, national unions, coaches, journalists, broadcasters and amateur clubs. </p>
+    <p>Click on the headings above to see the latest Tweets of top players, clubs, national unions, competitions, journalists, broadcasters and other major names in rugby.</p>
     
-    <p class="lead">The site will always evolve due to changes on Twitter and developments with our great sport - please get in touch with new accounts and #hashtags using the Suggestions tool below.</p>
+    <p>On game day the Match Centre shows live international and club rugby updates for both teams and the match #hashtag so you can easily join in the conversation.</p>
 
-    <p>We have grouped the accounts for you so please head to your favourite competitions, clubs and national teams.</p>
-
-    <p>Coming soon – British and Irish Lions; Rugby Sevens; Japan Top League; Women’s Rugby section; ITM Cup, more IRB nations added to the International Section.</p>
+    <p>Interact as you would on Twitter and please contact<a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</p>
+    <br></br>
+    <p class="text-center"><strong>More to Follow. We hope you enjoy the site.</strong></p>
     <br>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
   </div>
