Added a competition and other cosmetic changes.

--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -1,6 +1,7 @@
 @(category: Category)(teams: Seq[models.Team])(team: Option[models.Team])(players: Seq[models.Member])(widget: Option[models.Widget])
 
 @main("Follow Rugby"){
+	 <div class="row">
   <div class="span3">
     <div class="well sidebar-nav">
       <ul class="nav nav-list>
@@ -49,14 +50,14 @@
   </table>
   }
   </div>
-  
-}{ 
+
   <div class="span4">
   @widget.map { list =>
     <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   }
+  </div>
   </div>
 }
     
