--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -1,7 +1,7 @@
 @()
 
 @main("Follow Rugby"){
-
+ <div class="row">
   <div class="span8">
     <p class="lead">Follow Rugby has been designed to make it easier for anyone interested in rugby to follow its key developments on Twitter.</p>
 
@@ -18,9 +18,7 @@
     <p><small>*We cannot guarantee that all teams will publish updates for all matches but the official accounts of club and international sides are increasingly Tweeting during games – it is a great way to follow the action.</small></p>
     <br>
     </div>
-  
- 
-}  {
+
   <div class="span4"> 
   <p><strong>Featured</strong></p>
   
@@ -28,7 +26,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
   </div>
-      
+   </div>   
 
 
 }
