--- a/app/views/comingSoon.scala.html
+++ b/app/views/comingSoon.scala.html
@@ -1,7 +1,7 @@
 @()
 
 @main("Follow Rugby"){
-
+ <div class="row">
   <div class="span8">
     <p>We will set up a full tour page for the British and Irish Lions as soon as the squad has been announced.</p>
     
@@ -20,7 +20,7 @@
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
   </div>
   
-}  {
+
   <div class="span4"> 
   <p><strong>Featured</strong></p>
   
@@ -28,7 +28,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
   </div>
-      
+  </div>    
 
 
 }
