--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,15 @@
-@()
+@()(implicit flash: play.api.mvc.Flash)
+
+@import helper._
 
 @main("Follow Rugby"){
-
+  <div class="row">
   <div class="span8">
+    @flash.get("success").map { message =>
+        <div class="alert alert-success">
+            <strong>Done!</strong> @message
+        </div>
+    }
     <p class="lead">Follow Rugby lists rugby Twitter accounts in relevant categories and displays their real time updates on each page.</p>
 
     <p>Click on the headings above to see the latest Tweets of top players, clubs, national unions, competitions, journalists, broadcasters and other major names in rugby.</p>
@@ -14,10 +21,11 @@
     <p class="text-center"><strong>More to Follow. We hope you enjoy the site.</strong></p>
     <br>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
+  
+
   </div>
   
  
-}  {
   <div class="span4"> 
   <p><strong>Featured</strong></p>
   
@@ -25,7 +33,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 	</div>
-      
+ </div>   
 
 
 }
