--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)(widgets: Html)
+@(title: String)(content: Html)
 
 @import models._
 
@@ -23,8 +23,86 @@
       .titleimage {
       }
       
+     
+      
       
     </style>
+
+<script language="javascript"> 
+          function move(tbFrom, tbTo, added) 
+            {
+               var arrFrom = new Array(); var arrTo = new Array(); 
+               var arrLU = new Array();
+               var i;
+               for (i = 0; i < tbTo.options.length; i++) 
+               {
+                arrLU[tbTo.options[i].text] = tbTo.options[i].value;
+                arrTo[i] = tbTo.options[i].text;
+               }
+               var fLength = 0;
+               var tLength = arrTo.length;
+               for(i = 0; i < tbFrom.options.length; i++) 
+               {
+                arrLU[tbFrom.options[i].text] = tbFrom.options[i].value;
+                if (tbFrom.options[i].selected && tbFrom.options[i].value != "") 
+                {
+                 arrTo[tLength] = tbFrom.options[i].text;
+                 tLength++;
+                 if(added==true) {
+                   countUp();
+                 } else {
+                   countDown();
+                 }
+                }
+                else 
+                {
+                 arrFrom[fLength] = tbFrom.options[i].text;
+                 fLength++;
+                }
+              }
+              
+              tbFrom.length = 0;
+              tbTo.length = 0;
+              var ii;
+              
+              for(ii = 0; ii < arrFrom.length; ii++) 
+              {
+                var no = new Option();
+                no.value = arrLU[arrFrom[ii]];
+                no.text = arrFrom[ii];
+                tbFrom[ii] = no;
+              }
+              
+              for(ii = 0; ii < arrTo.length; ii++) 
+              {
+               var no = new Option();
+               no.value = arrLU[arrTo[ii]];
+               no.text = arrTo[ii];
+               tbTo[ii] = no;
+              }
+              
+          }
+            
+          function countUp() {
+          	  var counter = document.getElementById("counter").innerHTML;
+              counter++;
+              document.getElementById("counter").innerHTML=counter;
+          }
+          
+          function countDown() {
+              var counter = document.getElementById("counter").innerHTML;
+              counter--;
+              document.getElementById("counter").innerHTML=counter;
+          }
+
+          function selectAllOptions(selStr)
+          {
+            var selObj = document.getElementById(selStr);
+            for (var i=0; i<selObj.options.length; i++) {
+              selObj.options[i].selected = true;
+            }
+          }
+      </script>
 </head>
 <body>
    <div class="container">
@@ -54,12 +132,13 @@
                       <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(4)">Aviva Premiership</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(5)">RaboDirect PRO 12</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(3)">Top 14</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(2)">Super 15</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(3)">Top 14</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.selectCategory(6)">Japan</a></li>
                       </ul>
             </li>
             <li><a href="@routes.Application.selectCategory(8)">More Rugby</a></li>
+            <li><a href="@routes.Application.competition">Competition</a></li>
       	    <li><a href="@routes.Application.about">About</a></li>
             <li><a href="@routes.Application.comingSoon">Coming Soon</a></li>
         	</ul>
@@ -67,11 +146,10 @@
         </div>
         </div>
     
-    <div class="row">
+    
       
       @content
-      @widgets
-    </div>
+    
     
   </div>     
 </body>
