--- a/app/views/suggestions.scala.html
+++ b/app/views/suggestions.scala.html
@@ -1,8 +1,8 @@
 @(message: String)
 
-@main("Follow Rugby"){<p>hello</p>}{
+@main("Follow Rugby"){
   
-    <div class="row-fluid">
+     <div class="row">
 		<div class="span12">
 			<div class="span6"><a class="twitter-timeline" href="https://twitter.com/FollowRugby666/players" data-widget-id="276076889653772289">Rugby</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
