--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -4,8 +4,9 @@
 	 <div class="row">
   <div class="span3">
     <div class="well sidebar-nav">
-      <ul class="nav nav-list>
-      <li class="nav-header>@category.name</li>
+      <ul class="nav nav-list">
+      <li class="nav-header">@category.name</li>
+      <li class="divider"></li>
       @teams.sortBy(_.name).map { team =>
         <li><a href="@routes.Application.selectTeam(category.id.get, team.id.get)">@team.name</a></li>
         }
